--- a/examples/1.html
+++ b/examples/1.html
@@ -5,7 +5,6 @@
         name="viewport"
         content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="google" content="notranslate">
-
   <title>
     1
   </title>
@@ -16,9 +15,7 @@
   <script src="../build/webglplayground.js"></script>
   <script>
     var canvas = document.getElementById("canvas");
-    var ctx = canvas.getContext("2d");
-    ctx.fillStyle = "#aaaaaa";
-    ctx.fillRect(0, 0, 400, 400);
+    var renderer = new webglplayground.Renderer(canvas);
   </script>
 </body>
 </html>
