allow many attributes

--- a/examples/1.html
+++ b/examples/1.html
@@ -22,7 +22,7 @@
 
     const rect = webgl.createObject3D(
       webglplayground.Utils.createRect(webgl),
-      webgl.createMaterial()
+      webglplayground.Utils.createColoredMaterial(webgl)
     );
 
     const callback = () => {
