--- a/examples/simpleRect.html
+++ b/examples/simpleRect.html
@@ -18,6 +18,7 @@
 
     var webgl = new webglplayground.WebGL(canvas);
 
+    const scene = webgl.createScene();
     const renderer = webgl.createRenderer(canvas.width, canvas.height);
 
     const rect = webgl.createObject3D(
@@ -25,9 +26,10 @@
       webglplayground.Utils.createColoredMaterial(webgl)
     );
 
+    scene.add(rect);
+
     const callback = () => {
-      renderer.beginRender();
-      renderer.render(rect);
+      scene.render(renderer);
 
       requestAnimationFrame(callback);
     }
