encapsule glMatrix usage for maybe future rewrites. Use PerspectiveCamera instead of static matrix

--- a/examples/doubleRect.html
+++ b/examples/doubleRect.html
@@ -6,7 +6,7 @@
         content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="google" content="notranslate">
   <title>
-    1
+    doubleRect
   </title>
 </head>
 <body>
@@ -20,6 +20,7 @@
 
     const scene = webgl.createScene();
     const renderer = webgl.createRenderer(canvas.width, canvas.height);
+    const camera = webgl.createPerspectiveCamera(canvas.width, canvas.height);
 
     const rect = webgl.createObject3D(
       webglplayground.Utils.createRect(webgl),
@@ -40,7 +41,7 @@
 
       rect2.rotateY(1);
 
-      scene.render(renderer);
+      scene.render(renderer, camera);
 
       requestAnimationFrame(callback);
     }
