--- a/examples/changeAttribute.html
+++ b/examples/changeAttribute.html
@@ -42,6 +42,10 @@
         -0.5, -0.5, 0
       ]);
 
+      rect.geometry.attributes.index.update([
+        0, 1, 2,
+      ]);
+
       // no need to change colors, since position is the leading attribute
     }, 1000);
 
